<resources>
    <string name="app_name">SalonBooking</string>

    <!-- Content descriptions -->
    <string name="content_description_splashLogo">Splash logo</string>
    <string name="content_description_sign_in_background">Sign in background image</string>
    <string name="content_description_button_icon">Button icon</string>
    <string name="content_description_back_icon">Button icon</string>
    <string name="content_description_location_permission_icon">Location permission icon</string>
    <string name="content_description_notification_permission_icon">Notification permission icon</string>
    <string name="content_description_search_icon">Search icon</string>
    <string name="content_description_banner_image">Banner image</string>
    <string name="content_description_top_rated">Top Rated medal icon</string>
    <string name="content_description_stylist_image">Stylist image</string>
    <string name="content_description_calendar">More date</string>
    <string name="content_description_qr_code">QR Code</string>
    <string name="content_description_dialog_successful_icon">Dialog successful icon</string>
    <string name="content_description_dialog_failed_icon">Dialog failed icon</string>

    <!-- Title -->
    <string name="title_sign_in">Book Your Perfect\nLook in Minutes!</string>
    <string name="title_verify_your_identity">Verify Your Identity</string>
    <string name="title_app_permissions">App Permissions</string>
    <string name="title_location">Location</string>
    <string name="title_stylist_list">Choose your stylist</string>
    <string name="title_any_stylist">Any Stylist</string>
    <string name="title_date_and_time">Date and time</string>
    <string name="title_top_rated">Top Rated</string>
    <string name="title_booking_summary">Booking summary</string>
    <string name="title_pricing_details">Pricing Details</string>
    <string name="title_total">Total</string>
    <string name="title_qr_code_info">Scan this QR code at the salon for\nquick check-in.</string>
    <string name="title_booking_date">Booking Date</string>
    <string name="title_booking_time">Booking Time</string>
    <string name="title_stylist">Stylist</string>
    <string name="title_status">Status</string>
    <string name="title_payment_type">Payment Type</string>
    <string name="title_receipt">Receipt</string>
    <string name="title_salon">Salon</string>
    <string name="title_customer_name">Customer Name</string>
    <string name="title_bottombar_home">Home</string>
    <string name="title_bottombar_bookings">Bookings</string>
    <string name="title_bottombar_favourites">Favourites</string>

    <!-- Text -->
    <string name="hint_enter_your_email_or_phone_number">Enter your email or phone number.</string>
    <string name="text_or">Or</string>
    <string name="text_otp_error_message">The code you entered is incorrect.\nPlease try again.</string>
    <string name="text_otp_empty_message">Eksik alanlar bulunuyor</string>
    <string name="text_resend_message">Didn’t receive a code? <font color='#007AFF'>Resend</font></string>
    <string name="text_sent_digit_code_info">We’ve sent a 6-digit code to <b>%s</b>\nPlease enter it below.</string>
    <string name="text_permission_screen_bottom_info">You can always adjust these later from within the <font color='#007AFF'>Settings app</font>.</string>
    <string name="text_app_permissions_subtitle">One last thing! You\'ll need to grant the following app permissions to enable the features you\'ve chosen:</string>
    <string name="text_notifications_perm_title">Notifications</string>
    <string name="text_notification_perm_description">For important activity that takes place in yor Cocoon For important activity that takes place in yor Cocoon gre</string>
    <string name="text_notifications_perm_location">Location</string>
    <string name="text_notifications_perm_description">For important activity that takes place in yor Cocoon For important activity that takes place in yor Cocoon gre</string>
    <string name="text_location_subadminarea_adminarea">%s, %s</string>
    <string name="text_turn_on_location">Turn on your location</string>
    <string name="text_service_category_haircut">Hair Cut</string>
    <string name="text_service_category_hairstyling">Hair Styling</string>
    <string name="text_service_category_nail_art">Nail Art</string>
    <string name="text_service_category_hair_treatments">Hair Treatments</string>
    <string name="text_next_available_stylist">Next available stylist</string>
    <string name="text_more_dates">More\ndates</string>
    <string name="text_40_mins">40 mins</string>

    <!-- Button text -->
    <string name="btn_text_continue">Continue</string>
    <string name="btn_text_continue_with_selected_count">Continue (%d)</string>
    <string name="btn_text_done">Done</string>
    <string name="btn_text_yes">Yes</string>
    <string name="btn_text_no">No</string>
    <string name="btn_text_stylist_select">Select &amp; Continue</string>
    <string name="btn_text_confirm_appointment">Confirm Appointment</string>
    <string name="btn_text_proceed">Proceed</string>
    <string name="btn_download_receipt">Download Receipt</string>

    <!-- Dialog text -->
    <string name="title_location_permission">Location Permission</string>
    <string name="description_location_permission">You can list salons near you. Can you grant location permission?</string>
    <string name="title_location_settings">Open location settings</string>
    <string name="description_location_settings">You can list salons near you. Can you turn on location?</string>

    <!-- Status Dialog text -->
    <string name="title_status_dialog_appointment_confirmed">Your salon appointment is confirmed!</string>
    <string name="description_status_dialog_confirmed">Thank you for your payment. We look forward to seeing you soon.</string>
    <string name="btn_view_receipt">View Receipt</string>
    <string name="btn_back_to_home">Back to Home</string>
    <string name="title_status_dialog_payment_failed">Payment Failed</string>
    <string name="description_status_dialog_payment_failed">We couldn\'t process your payment. Please check your card details or try another payment method.</string>
    <string name="btn_try_again">Try Again</string>
    <string name="btn_change_payment_method">Change Payment Method</string>
    <string name="title_status_dialog_payment_loading">Processing Your Payment…</string>
    <string name="description_status_dialog_payment_loading">Please wait while we complete your transaction.</string>
    <string name="message_please_select_payment_type">Please, select payment type!</string>

    <!-- Enum text -->
    <string name="at_salon">At salon</string>
    <string name="online">Online</string>
    <string name="upcoming">Upcoming</string>
    <string name="completed">Completed</string>
    <string name="cancelled">Cancelled</string>

    <string name="text_booking_date">%s, %s %d at %s</string>
    <string name="text_stylist">%s - %s</string>
    <string name="text_rating">%.2f (%d)</string>

    <!-- Mock text -->
    <string name="mock_name_john_doe">John Doe</string>
    <string name="content_description_salon_empty_state_icon">Salon empty state icon</string>

    <string name="btn_text_cancel_booking">Cancel Booking</string>
    <string name="text_date_time">%s - %s</string>
    <string name="text_selected_services">Services: %s</string>
    <string name="cart_empty_state_title">No bookings!</string>
    <string name="cart_empty_state_body">No bookings you have. You can book a new service from any salon!</string>
    <string name="title_booking_cancelled">Booking Cancelled</string>
    <string name="description_booking_cancelled">Your appointment has been successfully canceled.</string>
    <string name="btn_text_back_to_bookings">Back to Bookings</string>
    <string name="title_favourites">Favourites</string>
    <string name="title_loading">Loading..</string>
</resources>